# evvents

./: .gitignore  AGENTS.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  config.py  exceptions.py  extensions.py  queue.py
backend/app/api/: __init__.py  admin.py  auth.py  bot_webhook.py  checkin.py  decorators.py  events.py  org.py  tickets.py
backend/app/bot/: __init__.py  handlers.py  helpers.py
backend/app/models/: __init__.py  attendee.py  event.py  mixins.py  order.py  organization.py  ticket.py  user.py  waitlist.py
backend/app/plugins/: __init__.py  base.py  loader.py  registry.py
backend/app/services/: admin_service.py  auth_service.py  checkin_service.py  email_service.py  event_service.py  order_service.py  org_service.py  seating_service.py  telegram_bot_service.py  ticket_service.py  waitlist_service.py
backend/app/tasks/: email_tasks.py  telegram_tasks.py
backend/app/utils/: jwt.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 6c5d532b77f8_add_soft_delete_to_organizations.py  b3385227961b_initial_schema.py  dadc655a657d_initial.py  ea5ccfc6f4ae_initial.py  f92a0d1ca8a0_initial.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_admin.py  test_auth.py  test_checkin.py  test_events.py  test_orders.py  test_org.py  test_seating.py  test_tickets.py  test_waitlist.py
backend/tests/plugins/: test_base.py  test_loader.py  test_registry.py
backend/tests/tasks/: test_telegram_tasks.py
(+51 files in other folders)
